Page MenuHome GnuPG

Kleopatra: Certificate selection dialog only offers CSR generation
Closed, ResolvedPublic

Description

Hi Ingo,

this was probably broken by me at some point but I don't know why it occurs. In the certificate selection dialog for file encryption certificates (the line action) there is a "New..." and that only opens the S/MIME / CSR Mask and does not allow to generate an OpenPGP key. Where I think New at that place mostly is useful for OpenPGP and not for S/MIME.

Thanks

Event Timeline

ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Mar 3 2021, 10:36 AM
ikloecker changed the task status from Open to Testing.Mar 3 2021, 12:29 PM
ikloecker reassigned this task from ikloecker to aheinecke.
ikloecker added a subscriber: ikloecker.

The certificate selection dialog for file encryption certificates is now restricted to encryption keys of the selected key protocol. The "New..." button allows the creation of a key of the selected key protocol.

ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Mar 3 2021, 12:29 PM
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Oct 20 2021, 4:39 PM