Default to any usage and any protocol in certificate selection dialog

... and make sure we catch calls of setOptions() without any allowed usage
or any allowed protocol.

GnuPG-bug-id: 5332